--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,20 @@ ENV/
 
 # mkdocs documentation
 /site
+
+# Windows:
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Python:
+*.py[cod]
+*.so
+*.egg
+*.egg-info
+dist
+build
+
+# My configurations:
+db.ini
+deploy_key_rsa
